assignment/shift/facility

--- a/deeplink.html
+++ b/deeplink.html
@@ -26,5 +26,7 @@
 <p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1&amp;p1=32762d">Deep link to Not found</a></span></p>
 <p class="p3"><span class="s1"></span><br></p>
 <p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1">Debug Deep link</a></span></p>
+<p class="p3"><span class="s1"></span><br></p>
+<p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1&p1=844985&env1=13">Debug Deep link with fac/shift/assignment</a></span></p>
 </body>
 </html>
