--- a/deeplink.html
+++ b/deeplink.html
@@ -29,6 +29,6 @@
 <p class="p3"><span class="s1"></span><br></p>
 <p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1&p1=844985&env1=13">Deep link with fac and no resident</a></span></p>
 <p class="p3"><span class="s1"></span><br></p>
-<p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1&p1=948656&env1=13&env2=117%env3=23143">Deep link with fac/shift/assignment/resident /a></span></p>
+<p class="p2"><span class="s2"><a href="com.pointclickcare.companion://nav?sid=1&p1=948656&env1=13&env2=117%env3=23143">Deep link with fac/shift/assignment/resident</a></span></p>
 </body>
 </html>
